--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "symfony/monolog-bundle": "~2.11.3",
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "knplabs/knp-snappy-bundle": "1.5.x-dev",
+        "h4cc/wkhtmltopdf-amd64": "0.12.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
