--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -66,10 +66,11 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
-knp_snappy:
+# PDF generator
+knp_snappy:  
     pdf:
         enabled:    true
-        binary:     %kernel.root_dir%/../vendor/h4cc/wkhtmltopdf-amd64/bin/wkhtmltopdf-amd64
-        options:
-            - { name: 'viewport-size', value: ‘1024x768’ }
-            - { name: 'page-size', value: 'A4' }
+        binary:     %kernel.root_dir%/../vendor/wemersonjanuario/wkhtmltopdf-windows/bin/64bit/wkhtmltopdf
+#        options:
+#            - { name: 'viewport-size', value: ‘1024x768’ }
+#            - { name: 'page-size', value: 'A4' }
