--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "knplabs/knp-snappy-bundle": "1.5.x-dev",
-        "h4cc/wkhtmltopdf-amd64": "0.12.3"
+        "h4cc/wkhtmltopdf-amd64": "0.12.3",
+        "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
