--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,6 +35,7 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+#    exception_controller:  InvoiceBundle:Invoice:showException
 
 # Doctrine Configuration
 doctrine:
